- refactor: calculator logic. - feat: constant digit limit (up to 22). - fix: screen overflow

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -9,7 +9,7 @@
   }
 
   &:active {
-    background-color: darken($color, 3%);
+    background-color: darken($color, 5%);
   }
 }
 
