--- a/src/styles/_screen.scss
+++ b/src/styles/_screen.scss
@@ -4,20 +4,33 @@
 .screen {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
+  grid-template-rows: 50% 50%;
   padding: 24px;
   border-radius: 0 0 16px 16px;
   background-color: $screen-color;
   text-align: right;
-  overflow-x: hidden;
 
   .expression {
+    font-size: fs(1);
+    letter-spacing: 2px;
+    word-break: break-all;
+    overflow-y: scroll;
+  }
+
+  .constant {
     font-size: fs(2);
-    overflow-wrap: break-word;
-    overflow-y: hidden;
+    letter-spacing: 2px;
+    overflow-x: scroll;
   }
 
   .evaluation {
-    font-size: fs(1);
+    grid-row: span 2;
+    font-size: fs(2);
+    word-break: break-all;
+  }
+
+  .error {
+    color: #da1e37;
+    font-size: fs(2);
   }
 }
